UI Experiment: fix offscreen elements on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,8 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-height: 100dvh;
+  height: 100dvh;
 }
 
 code {
